--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,55 @@ version: '3.8'
 
 services:
   redis:
-    image: redis:7-alpine
+    image: redis:8.0-rc1-alpine
     restart: always
     ports:
       - '${REDIS_PORT}:6379'
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    networks:
+      instashare-network:
+        ipv4_address: 172.25.0.4
+
+  minio:
+    image: bitnami/minio:2025.4.8
+    restart: always
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USERNAME}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    ports:
+      - '${MINIO_API_PORT}:9000'
+      - '${MINIO_WEBUI_PORT}:9001'
+    volumes:
+      - 'minio_data:/data'
+    networks:
+      instashare-network:
+        ipv4_address: 172.25.0.5
 
   mongo:
-    image: mongo:7.0.5
+    image: mongo:8.0.8
     restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${DATABASE_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MONGO_INITDB_DATABASE: ${DATABASE_NAME}
     ports:
       - '${DATABASE_PORT}:27017'
     volumes:
-      - nestjs-template-mongo-db:/data/db
+      - instashare-db:/data/db
+    networks:
+      instashare-network:
+        ipv4_address: 172.25.0.6
 
 volumes:
-  nestjs-template-mongo-db:
+  instashare-db:
+    driver: local
+  minio_data:
+    driver: local
+
+networks:
+  instashare-network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.25.0.0/24
+          gateway: 172.25.0.1
