chore: :wrench: Update environment variables in .env.example for application configuration

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 #APP
 NODE_ENV=development
-APP_PORT=3000
-APP_NAME=nestjs-template
+APP_PORT=5000
+APP_NAME=nestjs-example
+APP_ORIGIN=http://localhost:3000
 
 #JWT
 JWT_SECRET=your_secret_here
 JWT_REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
-JWT_TOKEN_AUDIENCE=localhost:3000
-JWT_TOKEN_ISSUER=localhost:3000
-JWT_ACCESS_TOKEN_TTL=3600 #expiration time in seconds
+JWT_TOKEN_AUDIENCE=localhost:5000
+JWT_TOKEN_ISSUER=localhost:5000
+JWT_ACCESS_TOKEN_TTL=30 #expiration time in seconds
 JWT_REFRESH_TOKEN_TTL=86400 #expiration time in seconds
 
 #Google
@@ -19,8 +20,8 @@ GOOGLE_CLIENT_SECRET= #google client secret
 DATABASE_PORT=27017
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=secret
-DATABASE_NAME=api
-DATABASE_URL=mongodb://mongo:27017
+DATABASE_NAME=instashare
+DATABASE_URL=mongodb://root:secret@localhost:27017/instashare?authSource=admin
 
 
 #Redis
@@ -33,7 +34,23 @@ PRIVATE_KEY_PATH=keys/private-key.key #path to private key
 PUBLIC_KEY_PATH=keys/public-key.crt #path to public key
 
 #Mailer
-EMAIL_USER=example@gmail.com #email
-EMAIL_PASSKEY=your_passkey_here #email passkey
-EMAIL_USERNAME=Nestjs-Template #email username
-EMAIL_SERVICE=gmail #example: gmail
+EMAIL_USER= #example@email.com
+EMAIL_PASSKEY= #email passkey
+EMAIL_USERNAME= #email username
+EMAIL_SERVICE= #example: gmail
+
+#Minio
+MINIO_ENDPOINT=localhost
+MINIO_API_PORT=9000
+MINIO_WEBUI_PORT=9001
+
+MINIO_ROOT_USERNAME=username
+MINIO_ROOT_PASSWORD=password
+
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_USE_SSL=false
+MINIO_BUCKET_NAME=instashare
+
+#Files
+FILES_PATH=files/
